--- a/PacMan/PacMan.csproj
+++ b/PacMan/PacMan.csproj
@@ -33,5 +33,8 @@
     <None Update="Content\pacmanmap.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Stuffs.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
